# TelegramBot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: bot.py  config.py
src/handlers/: chat_interface.py  error.py  famous_personality.py  finish.py  quiz.py  random_fact.py  start.py
src/handlers/optional_features/: translator.py  voice_chatgpt.py
src/keyboards/: inline_keyboards.py  reply_keyboards.py
src/utils/: chatgpt_client.py  environment.py  logger.py
