[tool.black]
line-length = 88

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
pre-commit = "^4.2.0"

[project]
name = "telegrambot"
version = "0.1.0"
description = "Multi-feature Telegram Bot"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "python-telegram-bot (>=22.1,<23.0)",
    "openai (>=1.90.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


